--- a/ExilenceNextClient/src/app/login/containers/login-page/login-page.component.html
+++ b/ExilenceNextClient/src/app/login/containers/login-page/login-page.component.html
@@ -1,5 +1,12 @@
 <div class="container login-content pos--center">
   <div class="login-section">
-    <app-stepper (formData)="login($event)" (validateSession)="validate($event)"></app-stepper>
+    <app-stepper 
+     (formData)="doLogin($event)"
+     (validate)="doValidate($event)"
+     [leagues$]="leagues$"
+     [tradeLeagues$]="tradeLeagues$"
+     [loading$]="loading$"
+     [validated$]="validated$">
+    </app-stepper>
   </div>
 </div>
