Refactored notification components

--- a/ExilenceNextClient/src/app/app.component.html
+++ b/ExilenceNextClient/src/app/app.component.html
@@ -1,3 +1,3 @@
-<app-header (toggled)="notificationSidenav.toggle()"></app-header>
-<app-notification-sidebar #notificationSidenav></app-notification-sidebar>
+<app-header-page (toggled)="notificationSidenav.toggle()"></app-header-page>
+<app-notification-sidebar-page #notificationSidenav></app-notification-sidebar-page>
 <router-outlet></router-outlet>
