--- a/ExilenceNextClient/src/app/core/components/notification-list/notification-list.component.html
+++ b/ExilenceNextClient/src/app/core/components/notification-list/notification-list.component.html
@@ -1,5 +1,5 @@
 <mat-accordion class="notification-list">
-  <mat-expansion-panel *ngFor="let notification of (allNewNotifications$ | async) | reverse">
+  <mat-expansion-panel *ngFor="let notification of (notifications$ | async) | reverse">
     <mat-expansion-panel-header>
       <mat-panel-title>
         <span class="timestamp">{{notification.timestamp.format('LT')}}</span>{{notification.title | translate}}
