--- a/ExilenceNextClient/src/app/core/containers/notification-sidebar-page/notification-sidebar-page.component.html
+++ b/ExilenceNextClient/src/app/core/containers/notification-sidebar-page/notification-sidebar-page.component.html
@@ -1,6 +1,8 @@
 <mat-sidenav-container hasBackdrop="true" class="notification-sidebar-container">
   <mat-sidenav #sidenav mode="over" position="end">
-    <app-notification-list></app-notification-list>
+    <app-notification-list
+    [notifications$]="notifications$">
+  </app-notification-list>
   </mat-sidenav>
 
   <mat-sidenav-content>
