Added resize handler to top of toolbar

--- a/ExilenceNextClient/src/app/core/containers/header-page/header-page.component.html
+++ b/ExilenceNextClient/src/app/core/containers/header-page/header-page.component.html
@@ -1,3 +1,4 @@
+<div class="resize-handle-container"></div>
 <mat-toolbar class="toolbar noselect">
   <span class="title">{{ 'APP.TITLE' | translate }}
     <span class="version">Build {{appVersion}}</span>
