--- a/ExilenceNextClient/src/assets/styles/_variables.scss
+++ b/ExilenceNextClient/src/assets/styles/_variables.scss
@@ -18,9 +18,10 @@ $font-size: 13px;
 /* #endregion */
 
 /* #region Toolbar */
-$toolbar-height: 35px;
+$toolbar-height: 30px;
 $toolbar-background-color: #0a0a0a;
 $notification-badge-color: $secondary;
+$resize-handle-container-height: 5px;
 /* #endregion */
 
 /* #region Ads */
