--- a/ExilenceNextClient/src/app/auth/net-worth/components/net-worth-graph/net-worth-graph.component.html
+++ b/ExilenceNextClient/src/app/auth/net-worth/components/net-worth-graph/net-worth-graph.component.html
@@ -1,6 +1,9 @@
 <div class="chart-container pull--left float--left">
-  <ngx-charts-line-chart [scheme]="colorScheme" [results]="data" [xAxis]="true"
-    [yAxis]="true" [legend]="true" [showXAxisLabel]="true" [showYAxisLabel]="true" [xAxisLabel]="'x axis'"
-    [yAxisLabel]="'y axis'" [autoScale]="true" [timeline]="true">
-  </ngx-charts-line-chart>
+  <google-chart 
+    [data]="data" 
+    [columnNames]="['City', 'Inhabitants']"
+    [options]="options"
+    dynamicResize="true" 
+    type="LineChart">
+  </google-chart>
 </div>
