--- a/ExilenceNextClient/src/app/auth/net-worth/components/net-worth-graph/net-worth-graph.component.scss
+++ b/ExilenceNextClient/src/app/auth/net-worth/components/net-worth-graph/net-worth-graph.component.scss
@@ -2,7 +2,7 @@
 
 .chart-container {
     height: calc(100% - #{$ad-banner-top} - #{$main-padding}*1);
-    width: calc(100% - #{$ad-banner-right} - #{$main-padding}*1);
+    width: 100%;
     google-chart {
         width: 100%;
         height: 100%;
