--- a/ExilenceNextClient/src/app/auth/net-worth/components/net-worth-item-table/net-worth-item-table.component.scss
+++ b/ExilenceNextClient/src/app/auth/net-worth/components/net-worth-item-table/net-worth-item-table.component.scss
@@ -5,7 +5,7 @@
 }
 
 .net-worth-table-outer-container {
-  width: calc(100% - #{$ad-banner-right} - #{$main-padding}* 1);
+  width: 100%;
   .net-worth-table-container {
     height: calc(#{$net-worth-content-height} - 70px - #{$ad-banner-top} - #{$main-padding});
     overflow: auto;
