--- a/ExilenceNextClient/src/app/auth/net-worth/components/net-worth-graph/net-worth-graph.component.html
+++ b/ExilenceNextClient/src/app/auth/net-worth/components/net-worth-graph/net-worth-graph.component.html
@@ -1,13 +1,7 @@
 <div class="chart-container pull--left float--left">
   <google-chart 
     [data]="data" 
-    [columnNames]="['1', '2', 
-    {id:'i0', type:'number', role:'interval'}, 
-    {id:'i1', type:'number', role:'interval'}, 
-    {id:'i2', type:'number', role:'interval'}, 
-    {id:'i2', type:'number', role:'interval'}, 
-    {id:'i2', type:'number', role:'interval'}, 
-    {id:'i2', type:'number', role:'interval'}]"
+    [columnNames]="['Value', 'Time']"
     [options]="options"
     dynamicResize="true" 
     type="LineChart">
