--- a/ExilenceNextClient/src/app/auth/net-worth/components/net-worth-graph/net-worth-graph.component.html
+++ b/ExilenceNextClient/src/app/auth/net-worth/components/net-worth-graph/net-worth-graph.component.html
@@ -1,7 +1,7 @@
 <div class="chart-container pull--left float--left">
   <google-chart 
     [data]="data" 
-    [columnNames]="['Value', 'Time']"
+    [columnNames]="columnNames"
     [options]="options"
     dynamicResize="true" 
     type="LineChart">
