--- a/ExilenceNextClient/src/app/auth/net-worth/components/net-worth-graph/net-worth-graph.component.scss
+++ b/ExilenceNextClient/src/app/auth/net-worth/components/net-worth-graph/net-worth-graph.component.scss
@@ -1,10 +1,10 @@
 @import "./../../../../../assets/styles/variables";
 
 .chart-container {
-    height: calc(100% - #{$ad-banner-top} - #{$main-padding}*1);
-    width: 100%;
-    google-chart {
-        width: 100%;
-        height: 100%;
-    }
+  height: calc(100% - #{$ad-banner-top} - #{$main-padding}* 1);
+  width: 100%;
+  ngx-charts-line-chart {
+    z-index: 2;
+    fill: white;
+  }
 }
