--- a/ExilenceNextClient/src/app/auth/net-worth/containers/net-worth-page/net-worth-page.component.html
+++ b/ExilenceNextClient/src/app/auth/net-worth/containers/net-worth-page/net-worth-page.component.html
@@ -16,7 +16,7 @@
     <div class="ad-container">
         <img src="https://via.placeholder.com/970x90" />
     </div>
-    <app-net-worth-graph [chartData]="chartData" [hidden]="selectedIndex != 0 || chartData.data.length == 0"></app-net-worth-graph>
+    <app-net-worth-graph [chartData]="chartData" [colorScheme]="colorScheme" [hidden]="selectedIndex != 0 || chartData.length == 0"></app-net-worth-graph>
     <app-net-worth-item-table [hidden]="selectedIndex != 1"></app-net-worth-item-table>
 </div>
 <app-net-worth-bar [stashtabList$]="stashtabList$" [selectedTabs$]="selectedTabs$" (tabSelectionChanged)="tabsChanged($event)"></app-net-worth-bar>
