--- a/ExilenceNextClient/src/app/auth/net-worth/components/net-worth-graph/net-worth-graph.component.html
+++ b/ExilenceNextClient/src/app/auth/net-worth/components/net-worth-graph/net-worth-graph.component.html
@@ -1,6 +1,6 @@
 <div class="chart-container pull--left float--left">
   <ngx-charts-line-chart [scheme]="colorScheme" [results]="chartData" [xAxis]="true" [yAxis]="true" [legend]="true" legendTitle="{{ 'GRAPH.LEGEND_TITLE' | translate }}"
-    [showXAxisLabel]="true" [showYAxisLabel]="true" xAxisLabel="{{ 'GRAPH.TIMESTAMP' | translate }}" yAxisLabel="{{ 'GRAPH.VALUE' | translate }}" [autoScale]="true"
+    [showXAxisLabel]="true" [showYAxisLabel]="true" [xAxisTickFormatting]="axisFormat" xAxisLabel="{{ 'GRAPH.TIMESTAMP' | translate }}" yAxisLabel="{{ 'GRAPH.VALUE' | translate }}" [autoScale]="true"
     [timeline]="false"> 
   </ngx-charts-line-chart>
 </div>
