Reprovided services in net worth module level, and disabled logout button while snapshotting

--- a/ExilenceNextClient/src/app/core/containers/header-page/header-page.component.html
+++ b/ExilenceNextClient/src/app/core/containers/header-page/header-page.component.html
@@ -21,7 +21,7 @@
       </ng-container>
     </div>
     <div class="link-container">
-      <a (click)="logout()">
+      <a class="logout-link" (click)="logout()" [ngClass]="{ 'disabled': (status$ | async).snapshotting }">
         {{ 'ACCOUNT.LOGOUT' | translate}} </a>
     </div>
     <ng-container *ngIf="electronService.isElectron()">
