--- a/ExilenceNextClient/src/app/core/containers/header-page/header-page.component.scss
+++ b/ExilenceNextClient/src/app/core/containers/header-page/header-page.component.scss
@@ -24,7 +24,11 @@
       a {
         color: $primary;
         font-size: $font-size;
-      }
+        &.disabled {
+          color: $disabled-color;
+          cursor: not-allowed;
+        }
+      }        
     }
 
     .notification-badge {
