--- a/ExilenceNextClient/src/assets/styles/_variables.scss
+++ b/ExilenceNextClient/src/assets/styles/_variables.scss
@@ -22,6 +22,7 @@ $toolbar-height: 30px;
 $toolbar-background-color: #0a0a0a;
 $notification-badge-color: $secondary;
 $resize-handle-container-height: 5px;
+$disabled-color: #888888;
 /* #endregion */
 
 /* #region Ads */
