--- a/ExilenceNextClient/src/assets/styles/styles.scss
+++ b/ExilenceNextClient/src/assets/styles/styles.scss
@@ -23,7 +23,7 @@ body {
   background: $background-overlay, url("./../img/legion-bg.jpg");
   background-repeat: no-repeat;
   background-size: cover;
-  > *:not(.login-section, .ad-container) {
+  > *:not(.login-section) {
     width: 100%;
     height: calc(100% - #{$net-worth-bar-height});
   }
@@ -42,13 +42,6 @@ body {
 
 a {
   cursor: pointer;
-}
-
-.ad-container {
-  padding: 0 0 $main-padding 0;
-  justify-content: center;
-  display: flex;
-  align-items: center;
 }
 
 .mat-tab-group {
