--- a/ExilenceNextClient/src/app/auth/net-worth/components/net-worth-bar/net-worth-bar.component.html
+++ b/ExilenceNextClient/src/app/auth/net-worth/components/net-worth-bar/net-worth-bar.component.html
@@ -1,5 +1,20 @@
-<div class="net-worth-bar">
+<div class="net-worth-bar divider">
   <div class="net-worth-bar-content">
-    <app-net-worth-toolbar [stashtabList$]="stashtabList$" [selectedTabs$]="selectedTabs$" (tabSelectionChanged)="tabsChanged($event)"></app-net-worth-toolbar>
+    <div class="config specific-config">
+      <mat-form-field class="mr--15">
+        <mat-label>{{ 'NETWORTH.STASHTABS' | translate}}</mat-label>
+        <mat-select [formControl]="stashtabs" (selectionChange)="tabsChanged($event)" multiple>
+          <mat-option *ngFor="let tab of stashtabList$ | async" [value]="tab.id">{{tab.n}}</mat-option>
+        </mat-select>
+      </mat-form-field>
+    </div>
+    <div class="config global-config">
+      <mat-form-field class="ml--15">
+        <mat-label>{{ 'GLOBAL.PLAYERS' | translate}}</mat-label>
+        <mat-select [formControl]="players" (selectionChange)="playersChanged($event)" multiple disabled>
+          <mat-option *ngFor="let player of playerList$ | async" [value]="player.name">{{player.name}}</mat-option>
+        </mat-select>
+      </mat-form-field>
+    </div>
   </div>
 </div>
