Renamed net worth bar to top bar

--- a/ExilenceNextClient/src/app/auth/net-worth/components/top-bar/top-bar.component.html
+++ b/ExilenceNextClient/src/app/auth/net-worth/components/top-bar/top-bar.component.html
@@ -1,5 +1,5 @@
-<div class="net-worth-bar divider">
-  <div class="net-worth-bar-content">
+<div class="top-bar divider">
+  <div class="top-bar-content">
     <div class="config specific-config">
       <mat-form-field class="mr--15">
         <mat-label>{{ 'NETWORTH.STASHTABS' | translate}}</mat-label>
