--- a/ExilenceNextClient/src/app/auth/net-worth/components/top-bar/top-bar.component.scss
+++ b/ExilenceNextClient/src/app/auth/net-worth/components/top-bar/top-bar.component.scss
@@ -1,7 +1,7 @@
 @import "./../../../../../assets/styles/variables";
 
-.net-worth-bar {
-    height: $net-worth-bar-height;
+.top-bar {
+    height: $top-bar-height;
     margin-bottom: $main-margin;
     .config {
         &.specific-config {
