--- a/ExilenceNextClient/src/app/app.component.html
+++ b/ExilenceNextClient/src/app/app.component.html
@@ -1,3 +1,4 @@
 <app-header-page (toggled)="notificationSidenav.toggle()"></app-header-page>
 <app-notification-sidebar-page #notificationSidenav></app-notification-sidebar-page>
+<app-progress-snackbar #progressSnackbar></app-progress-snackbar>
 <router-outlet></router-outlet>
