--- a/ExilenceNextClient/src/assets/styles/_variables.scss
+++ b/ExilenceNextClient/src/assets/styles/_variables.scss
@@ -14,6 +14,7 @@ $faded-overlay-color: rgba(27, 27, 27, 0.6);
 /* #region Font */
 $main-font: 'Roboto';
 $font-color: #fff;
+$warning: #ffbd56;
 $secondary-font-color: #cecece;
 $font-size: 13px;
 /* #endregion */
