--- a/ExilenceNextClient/src/app/auth/net-worth/containers/net-worth-page/net-worth-page.component.html
+++ b/ExilenceNextClient/src/app/auth/net-worth/containers/net-worth-page/net-worth-page.component.html
@@ -13,7 +13,11 @@
     </mat-tab>
 </mat-tab-group>
 <div class="container net-worth-content">
-    <app-top-bar [stashtabList$]="stashtabList$" [moduleIndex$]="moduleIndex$" [playerList$]="playerList$" [selectedTabs$]="selectedTabs$" (tabSelectionChanged)="tabsChanged($event)"></app-top-bar>
-    <app-net-worth-graph [chartData]="chartData" [colorScheme]="colorScheme" [hidden]="selectedIndex != 0 || chartData.length == 0"></app-net-worth-graph>
+    <app-top-bar [stashtabList$]="stashtabList$" [moduleIndex$]="moduleIndex$" [playerList$]="playerList$"
+        [selectedTabs$]="selectedTabs$" (tabSelectionChanged)="tabsChanged($event)"></app-top-bar>
+
+    <app-net-worth-graph [loading]="graphLoading" [chartData]="chartData" [colorScheme]="colorScheme"
+        [hidden]="selectedIndex != 0 || chartData.length == 0"></app-net-worth-graph>
+
     <app-net-worth-item-table [tableData]="tableData" [hidden]="selectedIndex != 1"></app-net-worth-item-table>
 </div>
