--- a/ExilenceNextClient/src/assets/styles/_variables.scss
+++ b/ExilenceNextClient/src/assets/styles/_variables.scss
@@ -7,6 +7,7 @@ $container-padding: 25px;
 $version-font-color: #cecece;
 
 $background-color: #303030;
+$background-color-secondary: #171717;
 $background-overlay: linear-gradient(rgba(16, 16, 16, 0.8), rgba(16, 16, 16, 0.8));
 $faded-overlay-color: rgba(27, 27, 27, 0.6);
 /* #endregion */
