--- a/ExilenceNextClient/src/app/auth/net-worth/components/net-worth-item-table/net-worth-item-table.component.scss
+++ b/ExilenceNextClient/src/app/auth/net-worth/components/net-worth-item-table/net-worth-item-table.component.scss
@@ -7,7 +7,7 @@
 .net-worth-table-outer-container {
   width: 100%;
   .net-worth-table-container {
-    height: calc(#{$net-worth-content-height} - 70px - #{$main-padding});
+    height: calc(#{$net-worth-content-height} - 70px);
     overflow: auto;
     .net-worth-table {
       width: 100%;
