--- a/ExilenceNextClient/src/app/core/containers/notification-sidebar-page/notification-sidebar-page.component.html
+++ b/ExilenceNextClient/src/app/core/containers/notification-sidebar-page/notification-sidebar-page.component.html
@@ -1,4 +1,4 @@
-<mat-sidenav-container hasBackdrop="true" class="notification-sidebar-container">
+<mat-sidenav-container hasBackdrop="true" class="notification-sidebar-container" [ngClass]="{ 'toggled': toggled }">
   <mat-sidenav #sidenav mode="over" position="end">
     <app-notification-list
     [notifications$]="notifications$">
