Added styles scrollbar

--- a/ExilenceNextClient/src/assets/styles/_variables.scss
+++ b/ExilenceNextClient/src/assets/styles/_variables.scss
@@ -10,6 +10,7 @@ $background-color: #303030;
 $background-color-secondary: #171717;
 $background-overlay: linear-gradient(rgba(16, 16, 16, 0.8), rgba(16, 16, 16, 0.8));
 $faded-overlay-color: rgba(27, 27, 27, 0.6);
+$scrollbar-background-color: #1d1d1d;
 /* #endregion */
 
 /* #region Font */
@@ -28,7 +29,6 @@ $toolbar-background-color: #0a0a0a;
 $notification-badge-color: $secondary;
 $resize-handle-container-height: 5px;
 $disabled-color: #888888;
-
 /* #endregion */
 
 /* #region Top bar */
