More translations and notifications

--- a/ExilenceNextClient/src/app/auth/net-worth/containers/net-worth-page/net-worth-page.component.html
+++ b/ExilenceNextClient/src/app/auth/net-worth/containers/net-worth-page/net-worth-page.component.html
@@ -2,7 +2,7 @@
     <mat-tab #currentGrpTab id="currentGrpTab" class="active">
         <ng-template mat-tab-label>
             <mat-icon class="tab-icon">show_chart</mat-icon>
-            &nbsp;{{'NETWORTH.GRAPH.HEADER' | translate}}
+            &nbsp;{{'NETWORTH.GRAPHS.HEADER' | translate}}
         </ng-template>
     </mat-tab>
     <mat-tab #summaryTab id="summaryTab">
