--- a/ExilenceNextClient/src/app/auth/net-worth/components/top-bar/top-bar.component.html
+++ b/ExilenceNextClient/src/app/auth/net-worth/components/top-bar/top-bar.component.html
@@ -4,7 +4,7 @@
       <ng-container [ngSwitch]="moduleIndex$ | async">
         <ng-container *ngSwitchCase="0">
           <mat-form-field class="mr--15">
-            <mat-label>{{ 'NETWORTH.STASHTABS' | translate}}</mat-label>
+            <mat-label>{{ 'NETWORTH.SELECT_STASHTABS' | translate}}</mat-label>
             <mat-select [formControl]="stashtabs" (selectionChange)="tabsChanged($event)" multiple [disabled]="(status$ | async).snapshotting || (stashtabList$ | async).length == 0">
               <mat-option *ngFor="let tab of stashtabList$ | async" [value]="tab.id">{{tab.n}}</mat-option>
             </mat-select>
@@ -12,7 +12,7 @@
         </ng-container>
         <ng-container *ngSwitchCase="1">
             <mat-form-field class="mr--15">
-              <mat-label>{{ 'NETWORTH.STASHTABS' | translate}}</mat-label>
+              <mat-label>{{ 'NETWORTH.SELECT_STASHTABS' | translate}}</mat-label>
               <mat-select [formControl]="stashtabs" (selectionChange)="tabsChanged($event)" multiple [disabled]="(status$ | async).snapshotting || (stashtabList$ | async).length == 0">
                 <mat-option *ngFor="let tab of stashtabList$ | async" [value]="tab.id">{{tab.n}}</mat-option>
               </mat-select>
