--- a/ExilenceNextClient/src/app/core/containers/header-page/header-page.component.html
+++ b/ExilenceNextClient/src/app/core/containers/header-page/header-page.component.html
@@ -4,31 +4,36 @@
     <span class="version">Build {{appVersion}}</span>
   </span>
   <div class="pull--right btn-area">
-    <div class="link-container">
+    <div class="toolbar-content-container mr--15">
+      <div (click)="toggleSidenav()" *ngLet="(newNotifications$ | async).length as notificationCount"
+        class="notification-badge" [ngClass]="{ 'has-notifications': notificationCount > 0 }">
+        <ng-container *ngIf="notificationCount < 9 && notificationCount > 0">
+          {{notificationCount}}
+        </ng-container>
+        <ng-container *ngIf="notificationCount >= 9">
+          9 +
+        </ng-container>
+        <ng-container *ngIf="notificationCount == 0">
+          0
+        </ng-container>
+      </div>
+    </div>
+    <div class="toolbar-content-container mr--15">
       <a (click)="clear()">
         {{ 'SESSION.CLEAR' | translate}} </a>
     </div>
-    <div (click)="toggleSidenav()" *ngLet="(newNotifications$ | async).length as notificationCount"
-      class="notification-badge" [ngClass]="{ 'has-notifications': notificationCount > 0 }">
-      <ng-container *ngIf="notificationCount < 9 && notificationCount > 0">
-        {{notificationCount}}
-      </ng-container>
-      <ng-container *ngIf="notificationCount >= 9">
-        9 +
-      </ng-container>
-      <ng-container *ngIf="notificationCount == 0">
-        N/A
-      </ng-container>
-    </div>
-    <div class="link-container">
+    <div class="toolbar-content-container mr--15">
       <a class="logout-link" (click)="logout()" [ngClass]="{ 'disabled': (status$ | async).snapshotting }">
         {{ 'ACCOUNT.LOGOUT' | translate}} </a>
     </div>
-    <ng-container *ngIf="electronService.isElectron()">
+    <div class="toolbar-content-container mr--15">
+      <mat-icon (click)="toggleSettings()">settings</mat-icon>
+    </div>
+    <div class="toolbar-content-container" *ngIf="electronService.isElectron()">
       <mat-icon (click)="minimize()">minimize</mat-icon>
       <mat-icon (click)="maximize()" *ngIf="!isMaximized">crop_square</mat-icon>
       <mat-icon (click)="unmaximize()" *ngIf="isMaximized">filter_none</mat-icon>
       <mat-icon (click)="close()">close</mat-icon>
-    </ng-container>
+    </div>
   </div>
 </mat-toolbar>
